--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-toastify": "^9.0.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
